--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -25,9 +25,9 @@
     }
     @media screen and (max-width: 500px) {
       position: absolute;
-      width: 100%;
+      width: 95%;
       top: 5rem;
-      left: 0;
+      left: 2.5%;
       z-index: 10;
       background-color: #808080e7;
       align-items: center;
