--- a/src/components/Textbox/Textbox.css
+++ b/src/components/Textbox/Textbox.css
@@ -4,7 +4,7 @@
   .textbox__title {
     font-size: clamp(1.5rem, 4.6875vw, 3rem);
     font-weight: 700;
-    letter-spacing: 0.2rem;
+    letter-spacing: 0.1rem;
     color: #034903;
     &:not(:last-child) {
       margin-bottom: 2rem;
@@ -12,7 +12,8 @@
   }
   .textbox__text {
     font-size: clamp(1rem, 1.875vw, 1.2rem);
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.01rem;
+    line-height: 1.2;
     @media screen and (min-width: 1921px) {
       font-size: 2rem;
     }
