--- a/src/section/About/About.css
+++ b/src/section/About/About.css
@@ -106,6 +106,8 @@
     @media screen and (max-width: 600px) {
         &:nth-child(n) {
             transform: none;
+            width: 95%;
+            min-width: auto;
         }
         &:nth-child(1) {
             right: -300%;
@@ -121,16 +123,16 @@
             opacity: 0.65;
         }
         &:nth-child(4) {
-            right: 0.8rem;
+            right: 0.5rem;
             top: 25rem;
             opacity: 1;
-            background-color: #80808054;
+            background-color: #f5f5f5;
+            z-index: 10;
         }
         &:nth-child(5) {
-            right: 95%;
+            right: 85%;
             top: 31.25rem;
             opacity: 0.65;
-            z-index: 10;
         }
         &:nth-child(6) {
             right: 120%;
