--- a/src/section/Contacts/ContactUs.css
+++ b/src/section/Contacts/ContactUs.css
@@ -46,6 +46,7 @@
     }
     .form__email,
     .form__name {
+        color: #000;
         padding: 1rem;
         border: 2px solid #808080b0;
         border-radius: 5px;
@@ -54,6 +55,7 @@
     }
     .form__textarea {
         resize: none;
+        color: #000;
         width: 100%;
         height: clamp(12rem, 39vw, 18.75rem);
         border: 2px solid #808080b0;
